--- a/package.json
+++ b/package.json
@@ -8,14 +8,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.7",
+    "@react-navigation/native-stack": "^6.3.0",
+    "@react-navigation/stack": "^6.1.0",
     "@types/styled-components-react-native": "^5.1.3",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-web": "0.17.1",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "react-native-screens": "~3.10.1",
+    "react-native-safe-area-context": "3.3.2",
+    "expo-app-loading": "~1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
